--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Miniport by HTML5 UP</title>
+		<title>Kirk - Creator and Game Dev</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,10 +16,10 @@
 		<!-- Nav -->
 			<nav id="nav">
 				<ul class="container">
-					<li><a href="#top">Top</a></li>
-					<li><a href="#work">Work</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#contact">Contact</a></li>
+					<li><a href="#top">Jump to Top</a></li>
+					<li><a href="#work">Work Experience</a></li>
+					<li><a href="#portfolio">What I've Made</a></li>
+					<li><a href="#contact">Let's Talk</a></li>
 				</ul>
 			</nav>
 
@@ -32,10 +32,9 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Hi. I'm <strong>Jane Doe</strong>.</h1>
+								<h1>Name's <strong>Kirk</strong>,<br><br>but you can call me Captain.</h1>
 							</header>
-							<p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p>
-							<a href="#work" class="button large scrolly">Learn about what I do</a>
+							<p>Creativity. Quality. Reliability.</p>
 						</div>
 					</div>
 				</div>
@@ -45,22 +44,31 @@
 			<article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<h2>The Adventures of Captain Kirk</h2>
+						<p>My Journeys in Work and Quests for Knowledge</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>Chick-Fil-A, Inc.</h3>
+								<p><strong>Inventory Associate / Team Member</strong>
+									<strong> XP Gained: LV4 - [110/365]</strong></p>
+								<p><strong>-</strong> Coordinated restructuring of storage increasing capacity by 25%.<br>
+									<strong>-</strong> Assured quality of products and submitted daily reports.<br> 
+									<strong>-</strong> Adapted to multiple FoH and BoH roles.
+									</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>Panum Group, LLC</h3>
+								<p><strong>Web Developer</strong><br>
+									<strong> XP Gained: LV1 - [357/365]</strong></p>
+								<p><strong>-</strong> Enriching in Programming and Game Development.<br> 
+									<strong>-</strong> Maintains quality of existing webapps.<br> 
+									<strong>-</strong> Resolves errors and sends prompt, detailed reports.<br></p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
