--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
+								<h3>Indie Game Academy</h3>
 								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
 							</section>
 						</div>
