Most Superficial Edits complete
Updated template with main USP hooks, self-marketing language and simple project description.

Move to implementing tangible photo/icon assets to replace placeholders for profile picture, project images and previous experience icons.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<li><a href="#top">Jump to Top</a></li>
 					<li><a href="#work">Work Experience</a></li>
 					<li><a href="#portfolio">What I've Made</a></li>
-					<li><a href="#contact">Let's Talk</a></li>
+					<li><a href="#contact">Let's Connect</a></li>
 				</ul>
 			</nav>
 
@@ -32,9 +32,11 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Name's <strong>Kirk</strong>,<br><br>but you can call me Captain.</h1>
+								<h1>Name's <strong>Kirk</strong>,<br><br>or Captain if you prefer.</h1>
 							</header>
-							<p>Creativity. Quality. Reliability.</p>
+							<p>An ambitious creative and entrepreneur growing in Game Development. 
+								<br>
+								Creativity. Quality. Reliability.</p>
 						</div>
 					</div>
 				</div>
@@ -45,15 +47,15 @@
 				<div class="container">
 					<header>
 						<h2>The Adventures of Captain Kirk</h2>
-						<p>My Journeys in Work and Quests for Knowledge</p>
+						<p>My Journeys in Work, Quests for Knowledge, and Tests of Mettle</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
 								<h3>Chick-Fil-A, Inc.</h3>
-								<p><strong>Inventory Associate / Team Member</strong>
-									<strong> XP Gained: LV4 - [110/365]</strong></p>
+								<p><strong>Inventory Associate /<br> Team Member</strong>
+									<br><strong>XP Gained: LV4 - [110/365]</strong></p>
 								<p><strong>-</strong> Coordinated restructuring of storage increasing capacity by 25%.<br>
 									<strong>-</strong> Assured quality of products and submitted daily reports.<br> 
 									<strong>-</strong> Adapted to multiple FoH and BoH roles.
@@ -65,23 +67,27 @@
 								<span class="icon solid featured fa-camera-retro"></span>
 								<h3>Panum Group, LLC</h3>
 								<p><strong>Web Developer</strong><br>
-									<strong> XP Gained: LV1 - [357/365]</strong></p>
-								<p><strong>-</strong> Enriching in Programming and Game Development.<br> 
+									<strong> XP Gained: LV1 - [358/365]</strong></p>
+								<p> <strong>-</strong> Resolves errors and sends prompt, detailed reports.<br> 
 									<strong>-</strong> Maintains quality of existing webapps.<br> 
-									<strong>-</strong> Resolves errors and sends prompt, detailed reports.<br></p>
+									<strong>-</strong> Enriching in Programming and Game Development.<br></p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
 								<h3>Indie Game Academy</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<p><strong>Game Programmer /<br> Project Manager</strong><br>
+									<strong> XP Gained: LV2 </strong></p>
+								<p> <strong>-</strong> Completed two Level 3 Cohorts at IGA.<br> 
+									<strong>-</strong> Gained critical knowledge of game development production cycle, market research, and product lifecycle post-deployment.<br> 
+									<strong>-</strong> Built and deployed two game projects; <i>RoStation</i> (itch.io) and <i>Rise n' Grind</i> (iOS App Store).<br></p>
 							</section>
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+						<p>Want to see more about what I've made?</p>
+						<a href="#portfolio" class="button large scrolly">Check it out here!</a>
 					</footer>
 				</div>
 			</article>
@@ -90,56 +96,42 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<h2>What I've built and worked on.</h2>
+						<p>My enrichment activities, professional projects, and personal endeavors!</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">No Grave Too Shallow</a></h3>
+								<p>A game I helped program in a three person team for LD47; my first experience in game development!</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+								<h3><a href="#">RoStation</a></h3>
+								<p>The first game I made in IGA's Level 3 program as a Programmer with a team of four people!</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Rise N' Grind</a></h3>
+								<p>Another game I made in IGA's Level 3 program as a Project Manager with a team of three people!</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Blaster Boring</a></h3>
+								<p>A 3D perspective maze game I made myself with supplemental enrichment from GameDev.tv!</p>
 							</article>
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#contact" class="button large scrolly">Get in touch with me</a>
+						<p>Want this Captain to join your crew?</p>
+						<a href="#contact" class="button large scrolly">Connect with me</a>
 					</footer>
 				</div>
 			</article>
@@ -148,8 +140,8 @@
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
 					<header>
-						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+						<h2>Let's Connect!</h2>
+						<p>Find me around socials or contact me directly!</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
@@ -178,7 +170,7 @@
 						</div>
 						<div class="col-12">
 							<hr />
-							<h3>Find me on ...</h3>
+							<h3>Captain Kirk's Comms</h3>
 							<ul class="social">
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
